--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     min-height: 75px;
     background-color: #000;
@@ -18,6 +18,7 @@
 .navbar__link {
     padding: 0 0.3rem;
     color: inherit;
+    text-decoration: none;
 }
 
 .navbar__burger {
