Mise en page Accueil

--- a/src/App.css
+++ b/src/App.css
@@ -9,29 +9,12 @@
 
 body {
   margin: 0;
+  background: #121212;
+  color: #fff;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-/* h1, p {
-  margin-bottom: 1rem;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-.main {
-  min-height: 200vh;
-  padding: 6rem 1rem 1rem;
-} */
 
 ul {
   list-style: none;
