Petite modif Home

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   background: #121212;
-  color: #fff;
+  color: #eee;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
