--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -8,7 +8,7 @@
     width: 100%;
     min-height: 75px;
     background-color: #000;
-    color: #fff;
+    color: #eee;
 }
 
 .navbar__links {
@@ -58,7 +58,7 @@
         margin: 0 auto;
         width: 3vw;
         height: 1px;
-        background: #fff;
+        background: #eee;
     }
 
     .navbar__item:last-child:after {
@@ -88,7 +88,7 @@
         height: 3px;
         position: relative;
         border-radius: 3px;
-        background: #fff;
+        background: #eee;
         transition: all 0.5s ease-in-out;
     }
 
