--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -29,6 +29,12 @@
     flex-direction: column;
 }
 
+.about__skills > a {
+    width: 5%;
+    align-self: center;
+    margin-top: 2em;
+}
+
 .skills__title {
     text-align: center;
     margin-top: 2rem;
