--- a/src/components/FormContact.css
+++ b/src/components/FormContact.css
@@ -49,6 +49,12 @@ input {
     background-color: #76b900;
     color: #eee;
     margin-top: 2rem;
+    cursor: pointer;
+}
+
+.formButton:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
 }
 
 .formMessage {
