--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,3 +1,34 @@
 .contact__container {
     padding: 6rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__container > h1 {
+    text-align: center;
+    text-decoration: underline #76b900;
+    margin-bottom: 2rem;
+}
+
+.contact__text {
+    font-size: 1.5rem;
+}
+
+.contact__container > p > span  {
+    font-size: 1.2rem;
+}
+
+.contact__container > p > a {
+    text-decoration: none;
+    color: #eee;
+}
+
+.contact__container p {
+    text-align: center;
+}
+
+.contact__container > a {
+    width: 5%;
+    align-self: center;
+    margin-top: 2rem;
 }
