--- a/src/components/FormContact.css
+++ b/src/components/FormContact.css
@@ -1,7 +1,7 @@
 .contact-form {
     margin: 7% 0 0 24%;
     max-width: 50%;
-    position: relative;
+    /* position: relative; */
     max-width: 350px;
 }
 
@@ -27,15 +27,18 @@ input {
 }
   
 .email-content {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     border-bottom: 1px solid #76b900;
+    display: inline-flex;
+    flex-direction: row-reverse;
 }
   
 #not-mail {
     display: none;
-    position: absolute;
-    top: 8px;
+    /* position: absolute; */
+    width: 60%;
+    margin-top: 8px;
     color: red;
     right: 0;
     transform-origin: 50% 50%;
