--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,6 +2,7 @@
     padding: 6rem 1rem 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .contact__container > h1 {
