--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -30,6 +30,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1050px;
+    margin: auto;
 }
 
 .about__skills > a {
@@ -39,9 +40,8 @@
 }
 
 .skills__title {
-    text-align: center;
+    align-self: center;
     margin-top: 2rem;
-    justify-self: center;
 }
 
 .skills__logo {
